# bmad-orchestrator

./: .env.example  .gitignore  CLAUDE.md  bmad-test.2026-04-28.private-key.pem  legal.md  package.json  project.json  pyproject.toml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: bmad-issue-executor.yml  bmad-pr-retry.yml  bmad-retry.yml  bmad-smoke-test.yml  bmad-start-run.yml  forge-jira-custom-deploy.yml
_bmad/: config.toml  config.user.toml
_bmad/_config/: agent-manifest.csv  files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/: BMAD_LangGraph_Orchestration_Spec.md  affiliate_link_sharing_mobile.md  ai-compliance.md  bmad_orchestrator_test_env_plan.md  current-state-analysis.md  debugging.md  demo-script.md  figma-mcp-setup.md  installation.md  jira-comment-commands.md  multi-llm-abstraction-plan.md  pipeline-steps.md  slack-commands.md  slack-setup.md  template-jira-epic.md  template-jira.md
docs/requirements/: langgraph_bmad_dev_agent_fix.md
jira-custom/epic-ai-actions/: README.md  manifest.yml  package-lock.json  package.json
scripts/: ci-run.sh  clean_dummy_jira.py  run_dev_story.py  smoke_epic.py
slack-worker/: README.md  package-lock.json  package.json  tsconfig.json  vercel.json
slack-worker/api/: bmad-architect-run.ts  bmad-dev-run.ts  bmad-discovery-run.ts  bmad-stories-run.ts  jira-comment.ts  jira-issue.ts  slack.ts  workflow-architect-run.ts
slack-worker/lib/: forge-dispatch.ts  forge-workflows.ts  jira-webhooks.ts
src/: App.css  App.tsx  vite-env.d.ts
src/bmad_orchestrator/: cli.py  config.py  graph.py  state.py
src/components/: PrivacyBanner.css  PrivacyBanner.tsx
tests/: conftest.py
tests/integration/: test_graph_integration.py
tests/unit/: test_analytics_service.py  test_cli_env_loading.py  test_cli_log_format.py  test_cli_prompts.py  test_cli_token_report.py  test_config.py  test_event_collectors.py  test_graph.py  test_logger.py  test_personas.py  test_privacy_manager.py  test_slack_verbose.py  test_state.py  test_utils.py
webhook-worker/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
(+142 files in other folders)
